Adds calendar header date

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <header>
       <h1>Appcues Awesome Calendar</h1>
     </header>
-    <div class="container">
-      <div class="hours">
-        <div class="events">
 
-        </div>
+    <div class="calendar_header">
+      <span id="current_date"></span>
+    </div>
+    <div class="calendar_container">
+      <div class="hours">
       </div>
     </div>
+
   </body>
 </html>
