Adds minutesToHours functionality

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Calendar</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="scripts.js"></script>
   </head>
@@ -10,14 +11,28 @@
     <header>
       <h1>Appcues Awesome Calendar</h1>
     </header>
-
-    <div class="calendar_header">
-      <span id="current_date"></span>
-    </div>
-    <div class="calendar_container">
-      <div class="hours">
+      <!-- <div class="times">
+         <ul>
+          <li>9:00 <span>AM</span></li>
+          <li>10:00 <span>AM</span></li>
+          <li>11:00 <span>AM</span></li>
+          <li>12:00 <span>PM</span></li>
+          <li>1:00 <span>PM</span></li>
+          <li>2:00 <span>PM</span></li>
+          <li>3:00 <span>PM</span></li>
+          <li>4:00 <span>PM</span></li>
+          <li>5:00 <span>PM</span></li>
+          <li>7:00 <span>PM</span></li>
+          <li>8:00 <span>PM</span></li>
+          <li>8:00 <span>PM</span></li>
+        </ul>
+     </div> -->
+      <div class="headerCalWrapper">
+        <div class="calendarHeader">
+          <span id="currentDate"></span>
+        </div>
+        <div class="calendarContainer">
+        </div>
       </div>
-    </div>
-
   </body>
 </html>
