--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8">
     <title>Calendar</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300|Source+Sans+Pro|Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="scripts.js"></script>
   </head>
   <body>
     <header>
-      <h1>Appcues Awesome Calendar</h1>
+      <a class="brand" href="http://appcues.com/">
+        <img src="/appcues_logo.png" alt="Appcues Logo" />
+        <span>Appcues</span>
+      </a>
     </header>
       <!-- <div class="times">
          <ul>
