--- a/index.html
+++ b/index.html
@@ -15,28 +15,43 @@
         <span>Appcues</span>
       </a>
     </header>
-      <!-- <div class="times">
-         <ul>
-          <li>9:00 <span>AM</span></li>
-          <li>10:00 <span>AM</span></li>
-          <li>11:00 <span>AM</span></li>
-          <li>12:00 <span>PM</span></li>
-          <li>1:00 <span>PM</span></li>
-          <li>2:00 <span>PM</span></li>
-          <li>3:00 <span>PM</span></li>
-          <li>4:00 <span>PM</span></li>
-          <li>5:00 <span>PM</span></li>
-          <li>7:00 <span>PM</span></li>
-          <li>8:00 <span>PM</span></li>
-          <li>8:00 <span>PM</span></li>
-        </ul>
-     </div> -->
-      <div class="headerCalWrapper">
-        <div class="calendarHeader">
-          <span id="currentDate"></span>
+    <!-- <div class="contentWrapper"> -->
+        <div class="times">
+           <ul>
+            <li>9:00 <span>AM</span></li>
+              <li>9:30</li>
+            <li>10:00 <span>AM</span></li>
+              <li>10:30</li>
+            <li>11:00 <span>AM</span></li>
+              <li>ll:30</li>
+            <li>12:00 <span>PM</span></li>
+              <li>12:30</li>
+            <li>1:00 <span>PM</span></li>
+              <li>1:30</li>
+            <li>2:00 <span>PM</span></li>
+              <li>2:30</li>
+            <li>3:00 <span>PM</span></li>
+              <li>3:30</li>
+            <li>4:00 <span>PM</span></li>
+              <li>4:30</li>
+            <li>5:00 <span>PM</span></li>
+              <li>5:30</li>
+            <li>6:00 <span>PM</span></li>
+              <li>6:30</li>
+            <li>7:00 <span>PM</span></li>
+              <li>7:30</li>
+            <li>8:00 <span>PM</span></li>
+              <li>8:30</li>
+            <li>9:00 <span>PM</span></li>
+          </ul>
         </div>
-        <div class="calendarContainer">
+      <div class="calendarContainer">
+        <div class="headerCalWrapper">
+            <div class="calendarHeader">
+              <span id="currentDate"></span>
+            </div>
         </div>
       </div>
+    <!-- </div> -->
   </body>
 </html>
