--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <header>
-      <a class="brand" href="http://appcues.com/">
-        <img src="/appcues_logo.png" alt="Appcues Logo" />
-        <span>Appcues</span>
-      </a>
+
     </header>
     <!-- <div class="contentWrapper"> -->
-        <div class="times">
+            <div class="calendarHeader">
+              <span id="currentDate"></span>
+            </div>
+        <!-- <div class="times">
            <ul>
             <li>9:00 <span>AM</span></li>
               <li>9:30</li>
@@ -44,13 +44,8 @@
               <li>8:30</li>
             <li>9:00 <span>PM</span></li>
           </ul>
-        </div>
+        </div> -->
       <div class="calendarContainer">
-        <div class="headerCalWrapper">
-            <div class="calendarHeader">
-              <span id="currentDate"></span>
-            </div>
-        </div>
       </div>
     <!-- </div> -->
   </body>
